07202013 -> jonnyboy -> added release count per group to active_groups.php
						fixed bug in predb with zenet
						added 5 indexes to releases to improve postprocess queries
						improved query time in monitor
07192013 -> jonnyboy -> fixed bug in postprocess(windows)
						fixed bug in safe backfill, was adding parts to partrepair, you many need to run: truncate table partrepair;
						fixed bug in predb, you will need to run this query: update predb set title = replace (title, '  - omgwtfnzbs.org', '');
07182013 -> jonnyboy -> added alternate nntp to install
						fixed bug in orlydb
						fixed bug in threaded postprocess
						attempt to fix sab view queue
07162013 -> jonnyboy -> changed output for nzb errors during nfo processing
						fixed bug in threaded import using tmux
						fixed pass by reference error
						added group check in binaries scan
						typo in postprocess.php
						fixed bug in grabnzbs
						fixed bug in nfo nntp connection
						added option to import gzipped nzbs, not working in www/admin/nzb-import.php
						changed import copy file to save stream, increased import speed
						fixed typo in namecleaning.php
07152013 -> jonnyboy -> replaced external decrypt hashes script with internal one
						added preg_replace to grabnzbs and nzb-import to remove part number from end of subject
07152013 -> kevin    -> update namecleaning     Added some regex to name cleaning.
						Make sure that yEnc is before part count in binaries.php (some High Compressed virus posts were getting through).
07142013 -> jonnyboy -> reverted last
						changed default user view to list view
						updated rarinfo libs
						added additional monitor paths in tmux - request
						added limit to requestID per run
						added powerline segment for NNTP connections - ThePeePs
						added lines to monitor to show NNTP connections - Mike1
07132013 -> jonnyboy -> gave GrabNZBs its own thread count
						fixed type errors
						typos
						cleanup backfill.php